--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <button id="login-btn">Login</button>
         <div class="l-link">
           <a href="#" class="sign-up" id="signchg">Sign Up</a>
+          <!-- !! DEMO HOME ROUTE -->
+          <a href="./home.html">(passlogin)</a>
           <a href="#" class="forgot-pass">Forgot Password?</a>
         </div>
         <br />
